--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ a:link {
     border-top: 1px solid #000;
     margin-left: 15px;
   }
-#left2{float:left;width:500px; padding-top: 30px;}
-#right2{float:right;width:500px; padding-top: 30px;}
+#left2{float:left;width:49%; padding-top: 30px;}
+#right2{float:right;width:49%; padding-top: 30px;}
 .dlocator-box {
     color: #fff;
     width: 100%;
@@ -145,6 +145,9 @@ a:link {
     position: relative;
     font-size: 16px;
     line-height: 18px;
+    .news-box{
+      width: 333;
+    }
   }
   .latest-caption a {
     float: left;
@@ -178,6 +181,25 @@ a:link {
     position: relative;
     z-index: 99;
   }
-item{
 
-}  
+.public-notice-btn {
+  color: #cc0001;
+  background: #fff;
+  padding: 8px 16px;
+  border-radius: 10px;
+  width: 165px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+  .public-notice {
+    margin-top: 30px;
+    margin-bottom: 0;
+    display: block;
+    background: #cc0001;
+    padding: 10px 30px;
+  }
+  #container2
+  {
+width: 100%;
+  }
